add endpoint for fetching authenticated user's overall transaction history